# RDI-AgentX-AgentBeats-Competition

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect-agents.md  architect-backend.md  core-principle-finder.md  dev-frontend.md  dev-python.md  evaluation-specialist.md  generate-writeup.md  python-performance-expert.md  review-code.md
.claude/commands/: commit-with-message.md  phase-exec-planner.md  phase-implement.md
.claude/rules/: core-principles.md
.claude/scripts/: statusline.sh
.claude/scripts/ralph/: init.sh  prompt.md  ralph.sh
.claude/skills/core-principles/: SKILL.md
.claude/skills/designing-backend/: SKILL.md
.claude/skills/generating-prd/: SKILL.md
.claude/skills/implementing-python/: SKILL.md
.claude/skills/reviewing-code/: SKILL.md
.claude/templates/ralph/: progress.txt.template
.devcontainer/: devcontainer.json
.github/workflows/: agentbeats-analysis-claude.yaml  agentbeats-analysis-firecrawl.yaml  pytest.yaml  ruff.yaml
.github/workflows/claude/: README.md  call_claude.py  schema.json
.github/workflows/firecrawl/: README.md  call_firecrawl.py  prompt.txt
docs/: AgentBeats.md  PLATFORM_SETUP.md  PRD.md  REPRODUCIBILITY.md  RalphUsage.md  UserStory.md  python-best-practices.md
docs/AgentBeats/: AgentBeats-Leaderboard-Info.md  CompetitionAnalysis-Claude.json  CompetitionAnalysis-Firecrawl.json  CompetitionAnalysis.md
docs/arch_vis/: AgenticBenchArch.puml
docs/archive/ralph-v1/: prd.json  progress.txt
docs/ralph/: prd.json  progress.txt
docs/ralph-results/: ABSTRACT.md  DEMO_SCRIPT.md  DEMO_VIDEO_SCRIPT.md  DOCKER.md  END_TO_END_WORKFLOW.md  PLATFORM_SETUP.md  REPRODUCIBILITY_MOCK_DATA.md  WRITEUP.md  leaderboard_query.sql  scenario.toml.example
docs/ralph-results/reproducibility-results/: reproducibility-20260115-184659.json
docs/ralph/templates/: prd.json.template  progress.txt.template
examples/purple-agent/: Dockerfile  README.md  pyproject.toml
examples/purple-agent/src/purpleagent/: __init__.py  server.py
scripts/: evaluate_purple_agent.py  test_reproducibility.py  verify-docker.sh
scripts/ralph/: init.sh  ralph.sh
src/agentbeats/: __init__.py  agent.py  executor.py  messenger.py  server.py
src/agentbeats/evals/: __init__.py  graph.py  latency.py  llm_judge.py  text_metrics.py
tests/: test_agent.py  test_docker.py  test_executor.py  test_graph.py  test_latency.py  test_llm_judge.py  test_messenger.py  test_purple_agent.py  test_server.py  test_text_metrics.py
